@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-</pre></a></option></select><!-- '"  /></pre></a></option></select> <!DOCTYPE html> <!--  The desperate attempt to clean up some still open tags -->
+</pre></a></option></select></head> <!-- '"  /></pre></a></option></select> <!DOCTYPE html> <!--  The desperate attempt to clean up some still open tags -->
 </script></style>
 <html>
   <head>
